--- a/DAMO/index.html
+++ b/DAMO/index.html
@@ -1,1 +1,33 @@
-<!doctype html><html>  <head>    <meta charset="utf-8">	<title>快樂動物園</title>  </head>     <body bgcolor="#ffffdd">    <p>各位親愛的小朋友，為了讓您擁有歡樂的暑假時光，快樂動物園特地為大家開闢了數個新的園區，其中更有大家所喜愛的澳洲可愛動物－奇異鳥、無尾熊、企鵝，請大家趕快來喔！</p>　　<ul type="circle">      <a href="africa.html"><li>非洲動物區</li></a>	  <a href="asia.html"><li>亞洲動物區</li></a>	  <a href="Hot/kiwi.html"><li>奇異鳥</li></a>	  <a href="Hot/koala.html"><li>無尾熊</li></a>	  <a href="Hot/penguin.html"><li>企鵝</li></a>     </ul>	 熱門好站推薦：<a href="http://www.zoo.gov.tw/" title="Taipei Zoo">木柵動物園</a><br><br>	 <a href="mailto:jeanchen@mail.lucky.net.tw" title="mailto:jeanchen@mail.lucky.net.tw">歡迎寫信給我們</a>  </body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>施工中</title>
+	<style>
+
+
+
+	</style>
+
+	 <!-- Bootstrap CSS -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+</head>
+<body>
+	<section style="height:100px;">
+		<img alt="background" class="img-fluid" src="img/background.jpg">
+	</section>
+	<h1 class="text-white">施工中，敬請期待 ｡:.ﾟヽ(*´∀`)ﾉﾟ.:｡</h1>
+	
+
+
+
+
+
+	<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+</body>
+</html>
