--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -3,28 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>施工中</title>
+	<style>
+        html {
+            height: 100%;
+        }
 
-
-	 <!-- Bootstrap CSS -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        body {
+            background-image: url(img/background.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+        }
+        h1{
+        	color:white;
+        }
+    </style>
 </head>
 
 <body>
-	<section style="height:100px;">
-		<img alt="background" class="img-fluid" src="img/background.jpg">
-	</section>
-	<h1 class="text-white">施工中，敬請期待 ｡:.ﾟヽ(*´∀`)ﾉﾟ.:｡</h1>
+	<h1>施工中，敬請期待 ｡:.ﾟヽ(*´∀`)ﾉﾟ.:｡</h1>
 	
 
 
 
-
-
-	<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
