--- a/DEMO/music.html
+++ b/DEMO/music.html
@@ -42,9 +42,79 @@
 
 	<!-- 內容 -->
 	<section>
-		<div class="container">
-			
+		<p class="t1">想聽音樂的看這邊</p>
+	
+	<section>
+			<div class="timeline">
+		<div class="container1 left">
+			<div class="head">
+				<h1>Septempber</h1>
+			</div>
 		</div>
+		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">10/02(三 )18:30 開始</h2>
+      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+    		</div>
+  		</div>
+		<div class="container1 left">
+			<div class="head">
+				<h1>October</h1>
+			</div>
+		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">10/02(三 )18:30 開始</h2>
+      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">10/08(二) 18:30 開始</h2>
+      			<h2 class="c2">福爾摩沙馬戲團 土地的歌 <br>活動中心音樂廳</h2>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">10/23(三)18:30 開始</h2>
+      			<h2 class="c2">德國Quintense 人聲樂團/人聲音樂會 活動中心 音樂廳</h2>
+    		</div>
+  		</div>
+  		<div class="container1 left">
+    		<div class="head">
+      		<h1>November</h1>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">11/18(一)18:30 開始</h2>
+      			<h2 class="c2">表演家合作社劇團/小人物狂想曲 活動中心音樂廳</h2>
+    		</div>
+  		</div>
+  		<div class="container1 left">
+    		<div class="head">
+      			<h1>December</h1>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">12/03(二)18:30 開始</h2>
+      			<h2 class="c2">表演工作坊 夜夜說相聲 需索票 中正樓</h2>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">12/16(一) 18:30 開始</h2>
+      			<h2 class="c2"> 黑門山上的劇團愛情、戲劇、遊樂園
+     			活動中心音樂廳</h2>
+    		</div>
+  		</div>
+  		<div class="container1 right">
+    		<div class="content">
+      			<h2 class="c1">12/19(四) 19:30 開始</h2>
+      			<h2 class="c2"> 空中英語教室/2019 空英聖誕音樂會 需索票 中正樓</h2>
+    		</div>
+  		</div>
 	</section>
 
 
