--- a/DEMO/lecture.html
+++ b/DEMO/lecture.html
@@ -51,10 +51,16 @@
 				<h1>Septempber</h1>
 			</div>
 		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">09/25(三)15:10 開始</h2>
+            <h2 class="c2">航向星系中心的黑洞-看科技提升 帶來的思維改變 <br>孫維新 <br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
 		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/02(三 )18:30 開始</h2>
-      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+      			<h2 class="c1">09/26(四)15:10 開始</h2>
+      			<h2 class="c2">媒體經營的背後故事：臺灣吧的知識轉譯力！<br>蕭宇辰 <br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
 		<div class="container1 left">
@@ -64,22 +70,58 @@
 		</div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/02(三 )18:30 開始</h2>
-      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+      			<h2 class="c1">10/15(二)15:10 開始</h2>
+      			<h2 class="c2">剩食X生活 <br>七喜<br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/08(二) 18:30 開始</h2>
-      			<h2 class="c2">福爾摩沙馬戲團 土地的歌 <br>活動中心音樂廳</h2>
+      			<h2 class="c1">10/15(二) 18:30 開始</h2>
+      			<h2 class="c2">DIY-舊衣再利用 <br>全人村南棟108教室</h2>
     		</div>
   		</div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/23(三)18:30 開始</h2>
-      			<h2 class="c2">德國Quintense 人聲樂團/人聲音樂會 活動中心 音樂廳</h2>
+      			<h2 class="c1">10/16(三)10:00 開始</h2>
+      			<h2 class="c2">DIY-剩食煮義<br>小麥(日式主廚)/楊七喜<br>恩慈樓地下室中餐教室 </h2>
     		</div>
   		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/16(三)10:10 開始</h2>
+            <h2 class="c2"> 風暴後的精采人生<br>廖雅慧老師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div>
+       <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/22(二)18:00 開始</h2>
+            <h2 class="c2">桌游-獨立思考─練習言語表達(須先報名)<br>李宗憲、鄭凱元<br>全人村南棟108教室</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/23(三)15:10 開始</h2>
+            <h2 class="c2">全球暖化的衝擊與挑戰<br>汪中和<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/23(三)10:10 開始</h2>
+            <h2 class="c2">主耶穌愛我<br>中原大學教職 員詩班<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/30(三)10:10 開始</h2>
+            <h2 class="c2">用心聽，好好說<br>嚴長壽<br>全人村B1兩嘉演藝廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/30(三)10:10 開始</h2>
+            <h2 class="c2">我就是這樣創業的<br>成寧老師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div> 
   		<div class="container1 left">
     		<div class="head">
       		<h1>November</h1>
@@ -87,34 +129,87 @@
   		</div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">11/18(一)18:30 開始</h2>
-      			<h2 class="c2">表演家合作社劇團/小人物狂想曲 活動中心音樂廳</h2>
+      			<h2 class="c1">11/11(一)10:30 開始</h2>
+      			<h2 class="c2">東西文明會通之哲學要點-自然數及其意義之延伸<br>史作檉<br>全人村南棟618會議室</h2>
     		</div>
   		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/13(三)15:10 開始</h2>
+            <h2 class="c2">力量來自渴望<br>戴晨志<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/13(三)10:10 開始</h2>
+            <h2 class="c2">勇闖都市叢林的造型師<br>張麗青造型師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div> 
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/20(三)18:00 開始</h2>
+            <h2 class="c2">桌遊-道德價值思辨─練習畫畫表達(需報名)<br>李宗憲、鄭凱元<br>全人村南棟108教室</h2>
+        </div>
+      </div>
+       <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/20(三)10:10 開始</h2>
+            <h2 class="c2">為你唱首生命之歌 <br>林毓倫牧師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div> 
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/27(三)10:10 開始</h2>
+            <h2 class="c2">在生命極窮之處<br>黃介文老師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div> 
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/28(四)15:10 開始</h2>
+            <h2 class="c2">一人社會局<br>蘇紋雯<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
   		<div class="container1 left">
     		<div class="head">
       			<h1>December</h1>
     		</div>
   		</div>
+       <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/04(三)10:10 開始</h2>
+            <h2 class="c2">25歲人生清單<br>鄭予彤執行長 <br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div> 
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">12/03(二)18:30 開始</h2>
-      			<h2 class="c2">表演工作坊 夜夜說相聲 需索票 中正樓</h2>
+      			<h2 class="c1">12/04(三)15:10 開始</h2>
+      			<h2 class="c2">預見。遇 見。與美感教育共舞<br>陳碧涵<br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/11(三)10:10 開始</h2>
+            <h2 class="c2">音為愛<br>蔡嘉揚牧師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/12(四)18:00 開始</h2>
+            <h2 class="c2">桌遊-人性善惡─練習提問(需報名)<br>李宗憲、鄭凱元<br>全人村南棟108教室</h2>
+        </div>
+      </div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">12/16(一) 18:30 開始</h2>
-      			<h2 class="c2"> 黑門山上的劇團愛情、戲劇、遊樂園
-     			活動中心音樂廳</h2>
+      			<h2 class="c1">12/18(三) 10:10 開始</h2>
+      			<h2 class="c2"> 天國的鑰匙<br>范大陵長老<br>全人村中棟2樓瑞麗堂</h2>
     		</div>
   		</div>
-  		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">12/19(四) 19:30 開始</h2>
-      			<h2 class="c2"> 空中英語教室/2019 空英聖誕音樂會 需索票 中正樓</h2>
-    		</div>
-  		</div>
+      <div class="container1 right">
+      <div class="content">
+            <h2 class="c1">12/25(三) 10:10 開始</h2>
+            <h2 class="c2">人際關係不NG<br>王心怡師母、李冠利牧師<br>全人村中棟2樓瑞麗堂</h2>
+        </div>
+      </div>
 	</section>
 
 
