--- a/DEMO/movie.html
+++ b/DEMO/movie.html
@@ -53,10 +53,22 @@
 		</div>
 		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/02(三 )18:30 開始</h2>
-      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+      			<h2 class="c1">09/12(四)12:40 開始</h2>
+      			<h2 class="c2">波希米亞狂想曲(片長135分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">09/19(四)12:40 開始</h2>
+            <h2 class="c2">一個巨星的誕生(片長136分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">09/26(四)12:40 開始</h2>
+            <h2 class="c2">幸福綠皮書(片長130分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
 		<div class="container1 left">
 			<div class="head">
 				<h1>October</h1>
@@ -64,57 +76,224 @@
 		</div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">10/02(三 )18:30 開始</h2>
-      			<h2 class="c2">魚蹦興業 冬saygoodbye <br>活動中心音樂廳</h2>
+      			<h2 class="c1">10/03(四)12:40 開始</h2>
+      			<h2 class="c2">小偷家族(片長121分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/16(三)10:00 開始</h2>
+            <h2 class="c2">Green Book 幸福絲皮書-Part1<br>教學612</h2>
+        </div>
+      </div>
   		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">10/08(二) 18:30 開始</h2>
-      			<h2 class="c2">福爾摩沙馬戲團 土地的歌 <br>活動中心音樂廳</h2>
-    		</div>
-  		</div>
-  		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">10/23(三)18:30 開始</h2>
-      			<h2 class="c2">德國Quintense 人聲樂團/人聲音樂會 活動中心 音樂廳</h2>
-    		</div>
-  		</div>
+        <div class="content">
+            <h2 class="c1">10/17(四)12:40 開始</h2>
+            <h2 class="c2">小抓狂美術館(片長151分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/17(四)12:00 開始</h2>
+            <h2 class="c2">TBA<br>618會議室 </h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/23(三)10:00 開始</h2>
+            <h2 class="c2">Ki&Ka他和她的故事<br>TBA</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/23(三)10:00 開始</h2>
+            <h2 class="c2">Green Book 幸福絲皮書 -Part 2<br>教學612</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/24(四)12:40 開始</h2>
+            <h2 class="c2">完美陌生人(片長97分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/24(四)12:00 開始</h2>
+            <h2 class="c2">TBA<br>全球交誼廳 </h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/28(一)18:00 開始</h2>
+            <h2 class="c2">Perfetti sconosciuti完美陌生人<br>618會議室 </h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/30(三)10:00 開始</h2>
+            <h2 class="c2">Les demoiselles de Rochefort 柳媚花媽<br>圖書館秀德廳 </h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/31(四)12:40 開始</h2>
+            <h2 class="c2">證人(片長130分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">10/31(四)13:00 開始</h2>
+            <h2 class="c2">TBA<br>全球交誼廳</h2>
+        </div>
+      </div>
   		<div class="container1 left">
     		<div class="head">
       		<h1>November</h1>
     		</div>
   		</div>
   		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">11/18(一)18:30 開始</h2>
-      			<h2 class="c2">表演家合作社劇團/小人物狂想曲 活動中心音樂廳</h2>
-    		</div>
-  		</div>
+        <div class="content">
+            <h2 class="c1">11/07(四)12:40 開始</h2>
+            <h2 class="c2">享受吧！一個人的旅行(片長140分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/13(三)10:00 開始</h2>
+            <h2 class="c2">Front of the Class 叫我第-名Part1<br>教學612</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/14(四)12:40 開始</h2>
+            <h2 class="c2">尋找快樂的15種方法(片長119分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/14(四)18:00 開始</h2>
+            <h2 class="c2">Toilei-Ek Prem Karha 廁所-一個爱情枚事-Part l<br>全人303</h2>
+        </div>
+      </div>        
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/15(五)13:00 開始</h2>
+            <h2 class="c2">A Simple Favor 失蹤網紅 Partl<br>TBA </h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/20(三)10:00 開始</h2>
+            <h2 class="c2">Front of the Class 叫我第-名 Part2<br>教學612</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/21(四)12:40 開始</h2>
+            <h2 class="c2">那時候，我只剩下勇敢(片長115分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/21(四)18:00 開始</h2>
+            <h2 class="c2">Toilei-Ek Prem Karha 廁所-一個爱情枚事-Part 2<br>全人303</h2>
+        </div>
+      </div> 
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/22(五)13:00 開始</h2>
+            <h2 class="c2">A Simple Favor 失蹤網紅 Part2<br>圖書館秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/27(三)10:00 開始</h2>
+            <h2 class="c2">Stanley's Tiffin Box 史丹利的便當盒<br>教學612</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/28(四)12:40 開始</h2>
+            <h2 class="c2">跟著IKEA衣櫥去旅行(片長104分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">11/28(四)18:00 開始</h2>
+            <h2 class="c2">Top Secret: Wai Roon Pan Lan 海苔億萬富翁 - Part 1<br>全人303</h2>
+        </div>
+      </div> 
   		<div class="container1 left">
     		<div class="head">
       			<h1>December</h1>
     		</div>
   		</div>
   		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">12/03(二)18:30 開始</h2>
-      			<h2 class="c2">表演工作坊 夜夜說相聲 需索票 中正樓</h2>
-    		</div>
-  		</div>
+        <div class="content">
+            <h2 class="c1">12/02(一)15:00 開始</h2>
+            <h2 class="c2">TBA<br>618會議室</h2>
+        </div>
+      </div>
+  		<div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/04(三)10:00 開始</h2>
+            <h2 class="c2">Visaees Villaees最酷的旅伴<br>教學612</h2>
+        </div>
+      </div>
   		<div class="container1 right">
     		<div class="content">
-      			<h2 class="c1">12/16(一) 18:30 開始</h2>
-      			<h2 class="c2"> 黑門山上的劇團愛情、戲劇、遊樂園
-     			活動中心音樂廳</h2>
+      			<h2 class="c1">12/05(四)12:40 開始</h2>
+            <h2 class="c2">鐵達尼號(片長194分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
     		</div>
   		</div>
-  		<div class="container1 right">
-    		<div class="content">
-      			<h2 class="c1">12/19(四) 19:30 開始</h2>
-      			<h2 class="c2"> 空中英語教室/2019 空英聖誕音樂會 需索票 中正樓</h2>
-    		</div>
-  		</div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/05(四)18:00 開始</h2>
+            <h2 class="c2">Top Secret: Wai Roon Pan Lan 海苔億萬富翁 - Part 2<br>全人303</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/09(一)18:00 開始</h2>
+            <h2 class="c2">Piano, solo寂寞鋼琴師<br>618會議室</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/09(一)15:00 開始</h2>
+            <h2 class="c2">TBA<br>618會議室</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/12(四)12:40 開始</h2>
+            <h2 class="c2">理性與感性(片長137分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/12(四)18:00 開始</h2>
+            <h2 class="c2">The Blind Side 攻其不備 –Part 1<br>全人303</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/19(四)12:40 開始</h2>
+            <h2 class="c2">窗外有藍天(片長117分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/19(四)12:40 開始</h2>
+            <h2 class="c2">The Blind Side 攻其不備 –Part2<br>全人303</h2>   
+        </div>
+      </div>
+      <div class="container1 right">
+        <div class="content">
+            <h2 class="c1">12/26(四)12:40 開始</h2>
+            <h2 class="c2">霸王別姬(片長168分)<br>張靜愚紀念圖書館1樓秀德廳</h2>
+        </div>
+      </div>
 	</section>
 
 
