--- a/DEMO/movie.html
+++ b/DEMO/movie.html
@@ -42,7 +42,7 @@
 
 	<!-- 內容 -->
 	<section>
-		<p class="t1">想看表演\\電影的看這邊</p>
+		<p class="t1">想看電影的看這邊</p>
 	
 	<section>
 			<div class="timeline">
