--- a/DEMO/map.html
+++ b/DEMO/map.html
@@ -13,6 +13,15 @@
 
 	<!-- 自己寫的CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
+	<style>
+		.container{
+			background-color: #FCFAF2
+		}
+		body{
+			align-content: center;
+			text-align: center;
+		}
+	</style>
 </head>
 
 <body>
@@ -43,7 +52,23 @@
 	<!-- 內容 -->
 	<section>
 		<div class="container">
-			
+		<br>
+			<h1>通識活動地點</h1>
+			<img src="img/schoolmap.jpg" alt="通識活動地點" usemap="#schoolmap">
+			<map name="schoolmap">
+				<area  shape="poly" href="introduce.html#concertHall" alt="活動中心音樂廳" target="_blank" coords="123,338,248,278,290,363,229,388,213,368,153,379">
+				<area  shape="poly" href="introduce.html#hsiuTeHall" alt="圖書館秀德廳" target="_blank" coords="107,393,213,375,262,463,142,513">
+				<area  shape="poly" href="introduce.html#ruiLiTang" alt="全人村瑞麗堂" target="_blank" coords="285,219,430,191,497,298,358,368,288,309">
+				<area  shape="poly" href="introduce.html#artSalon" alt="教學大樓風雅頌" target="_blank" coords="427,484,531,470,590,561,585,646,507,649,426,594">
+			</map>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+		<br><br>
+			<h1>教你如何走到活動地點</h1>
+			<iframe src="https://www.youtube.com/embed/2aBtDz87UK0" width="960" height="720"></iframe>
+		<br><br>
 		</div>
 	</section>
 
