--- a/DEMO/aboutme.html
+++ b/DEMO/aboutme.html
@@ -13,6 +13,80 @@
 
 	<!-- 自己寫的CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
+	
+	<style type="text/css">
+			.bob-container{
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.bob-row{
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.bob-row:before,.bob-row:after{
+  display: table;
+  content: " ";  
+}
+
+.bob-row:after{
+  clear: both;
+}
+
+/*2個並排 不管在任何尺寸都會2個並排*/
+.bob-2item{
+  width:50%;
+}
+
+/*3個並排 在767px以下會垂直排列*/
+.bob-3item{
+  width: 100%;
+}
+/*4個並排 在767px以下會2個排列*/
+.bob-4item{
+  width:50%;
+}
+
+.bob-4item{
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float:left;
+}
+
+.bob-4item img{
+  width:100%;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .bob-container {
+    width: 750px;
+  }
+  .bob-3item{
+    width: 33.33333333%;
+  }
+  .bob-4item{
+    width:25%;
+  }
+}
+@media (min-width: 992px) {
+  .bob-container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .bob-container {
+    width: 1170px;
+  }
+}
+
+	</style>
+
+
 </head>
 
 <body>
@@ -46,7 +120,66 @@
 			
 		</div>
 	</section>
+	    <h2><center>關於我們</h2></center>
+	    	<div class="bob-container"> 
+  <div class="bob-row">
+    <div class="bob-4item">
+      <img src="img\04.jpg">
+      <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4></center></div>
+    </div>
+    <div class="bob-4item">
+      <img src="img\06.jpg">
+      <div style="height:43px;"><center><h4>姓名:陳映彤</h2><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4></center></div>
+    </div>
+    <div class="bob-4item">
+      <img src="img\17.jpg">
+      <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4></center></div>
+    </div>
+    <div class="bob-4item">
+      <img src="img\47.jpg">
+      <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4></center></div>
+    </div>
+  </div>
+</div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br> 
+<br>
+<br>
+<br>
+
+
+
+	    <h2><center>聯絡我們</h2></center>
+		
+			<center>
+			<form>
+  			姓名
+  				<br>
+  				<input type="text" name="name" placeholder="姓名" required>
+  				<br>
+  				聯絡電話
+  				<br>
+				<input type="text" name="way"placeholder="09xx-xxx-xxx" required>
+  				<br>
+				電子郵件
+				<br>
+				<input type="text" name="way">
+				<br>		
+				想對我們說的話
+				<br>
+				<textarea name="memo" cols="20" rows="2" wrap="hard">  </textarea>
+
+		</center>
+		</form>
+		 <center><input type="submit" value="送出" ></center>
+		 <br>
+		 
+		 
 
 	<!-- 頁尾 -->
 	<footer>
