--- a/DEMO/introduce.html
+++ b/DEMO/introduce.html
@@ -13,6 +13,15 @@
 
 	<!-- 自己寫的CSS -->
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
+	<style>
+		body{
+			text-align: center;
+		}
+		img{
+			height:680px;
+			width:1020px;
+		}
+	</style>
 </head>
 
 <body>
@@ -43,8 +52,39 @@
 	<!-- 內容 -->
 	<section>
 		<div class="container">
+			<br>
+			<h2><a name="concertHall">音樂廳</a></h2>
+			<img src="img/concertHall.jpg" alt="音樂廳">
+			
+			<h4 align="left"><br>介紹：音樂廳位於中原大學活動中心的一樓(影印部旁)，創辦以來除了經常協辦政府及企業藝文活動，亦協助多所學校作為戶外教學的參觀場所，老師及學員們也不定期舉辦成果發表，讓更多民眾能感受到藝文對於人類的精神生活存在著重要與充實的一面。</h4>
+			<h4 align="left">常見活動：<a href="show.html">通識藝文表演</a></h4>
+
+			<br>
+
+			<h2><a name="hsiuTeHall">秀德廳</a></h2>
+			<img src="img/hsiuTeHall.jpg" alt="秀德廳">
+			
+			<h4 align="left"><br>介紹：中原大學相當重視學生專業能力與品格涵養，以多元豐富的通識藝文活動，形塑學生博雅知性的人文氣質。位於中原大學圖書館一樓的秀德廳亦是做為校內推動博雅活動的重要基地，舉凡校內外各類研討會、講演，以及圖書館博雅電影院等活動均時常在此舉行。「秀德廳」的建置，不僅彰顯人子孝思、感懷母恩，更是全人博雅精神的典範！</h4>
+			<h4 align="left">常見活動：<a href="movie.html">博雅電影院</a>、<a href="lecture.html">各式講座</a></h4>
+
+			<br>
+
+			<h2><a name="artSalon">風雅頌演藝廳</a></h2>
+			<img src="img/artSalon.jpg" alt="風雅頌">
+			
+			<h4 align="left"><br>介紹：風雅頌藝文廳位於中原大學真知教學大樓的二樓，為音樂表演, 大師演講, 藝文欣賞的優雅空間，也為桃園中壢區帶來每周兩場精采的藝文活動。</h4>
+			<h4 align="left">常見活動：<a href="music.html">音樂會</a></h4>
+
+			<br>
+
+			<h2><a name="ruiLiTang">瑞麗堂</a></h2>
+			<img src="img/ruiLiTang.jpg" alt="瑞麗堂">
+			
+			<h4 align="left"><br>介紹：瑞麗堂位於中原大學全人村中棟的二樓，其場地投影位置適中、燈光柔和、環境整潔、氣氛典雅，加上圓形場地帶來的無距離感，非常適合演講或者音樂會的舉辦。</h4>
+			<h4 align="left">常見活動：<a href="music.html">音樂會</a>、<a href="lecture.html">人生講座</a></h4>
 			
 		</div>
+
 	</section>
 
 
