--- a/DEMO/aboutme.html
+++ b/DEMO/aboutme.html
@@ -116,31 +116,32 @@
 
 	<!-- 內容 -->
 	<section>
-		<div class="container">
+	<div class="container">
 			
-		</div>
-	</section>
-	    <h2><center>關於我們</h2></center>
-	    	<div class="bob-container"> 
-  <div class="bob-row">
-    <div class="bob-4item">
-      <img src="img\04.jpg">
-      <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4></center></div>
-    </div>
-    <div class="bob-4item">
-      <img src="img\06.jpg">
-      <div style="height:43px;"><center><h4>姓名:陳映彤</h2><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4></center></div>
-    </div>
-    <div class="bob-4item">
-      <img src="img\17.jpg">
-      <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4></center></div>
-    </div>
-    <div class="bob-4item">
-      <img src="img\47.jpg">
-      <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4></center></div>
-    </div>
-  </div>
-</div>
+		
+	<p class="t1">關於我們</p>
+	    <div class="bob-container"> 
+  		<div class="bob-row">
+    		<div class="bob-4item">
+		      <img src="img/04.jpg" class="hw"
+				    	onmouseover="this.src='img/04ig.png'" 
+				    	onmouseout="this.src='img/04.jpg'">
+		      <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4></center></div>
+    		</div>
+    		<div class="bob-4item">
+		      <img src="img/06.jpg">
+		      <div style="height:43px;"><center><h4>姓名:陳映彤</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4></center></div>	
+            </div>
+    		<div class="bob-4item">
+		      <img src="img/17.jpg">
+		      <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4></center></div>
+    		</div>
+    		<div class="bob-4item">
+		      <img src="img/47.jpg">
+		      <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4></center></div>
+		    </div>
+  		</div>
+	</div>
 
 <br>
 <br>
@@ -173,13 +174,14 @@
 				想對我們說的話
 				<br>
 				<textarea name="memo" cols="20" rows="2" wrap="hard">  </textarea>
-
-		</center>
-		</form>
+			</form>
+			</center>
+		
 		 <center><input type="submit" value="送出" ></center>
 		 <br>
 		 
-		 
+		</div>
+		</section>
 
 	<!-- 頁尾 -->
 	<footer>
