--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -54,13 +54,13 @@
 						</ol>
 						<div class="carousel-inner">
 						    <div class="carousel-item active">
-						    	<img src="img/01.jpg" class="img-thumbnail d-block w-100">
+						    	<img src="img/001.jpg" class="img-thumbnail d-block w-100">
 						    </div>
 						    <div class="carousel-item">
-						    	<img src="img/01.jpg" class="img-thumbnail d-block w-100" >
+						    	<img src="img/002.jpg" class="img-thumbnail d-block w-100" >
 						    </div>
 						    <div class="carousel-item">
-						    	<img src="img/01.jpg" class="img-thumbnail d-block w-100">
+						    	<img src="img/003.jpg" class="img-thumbnail d-block w-100">
 						    </div>
 						</div>
 					</div>
@@ -79,18 +79,20 @@
 			    <div class="col-sm-4 pic">
 			    	<a href="music.html" name="activity">
 				    	<img src="img/music.png" class="hw"
-				    	onmouseover="this.src='img/musicplace.jpg'" 
+				    	onmouseover="this.src='img/artSalon.jpg'" 
 				    	onmouseout="this.src='img/music.png'">
 			    	</a>
 			    </div>
 			    <div class="col-sm-2" align="center">
-			    	<img src="img/piano.png" class="rounded rounded float-center" height="150" width="150">
+			    	<img src="img/04ig.png" class="rounded rounded float-center" height="150" width="150">
+			    	<br>
+			    	<img src="img/06ig.png" class="rounded rounded float-center" height="150" width="150">
 			    </div>
 			    <!-- 表演 -->
 			    <div class="col-sm-4 pic">
 			    	<a href="show.html">
 				    	<img src="img/show.png" class="hw"
-				    	onmouseover="this.src='img/showplace.jpg'" 
+				    	onmouseover="this.src='img/concertHall.jpg'" 
 				    	onmouseout="this.src='img/show.png'">
 			    	</a>
 			    </div>
@@ -103,16 +105,20 @@
 			    <div class="col-sm-4 pic">
 			    	<a href="lecture.html">
 				    	<img src="img/lecture.png" class="hw"
-				    	onmouseover="this.src='img/lectureplace.jpg'" 
+				    	onmouseover="this.src='img/hsiuTeHall.jpg'" 
 				    	onmouseout="this.src='img/lecture.png'">
 			    	</a>
 			    </div>
-			    <div class="col-sm-2"></div>
+			    <div class="col-sm-2">
+			    	<img src="img/17ig.png" class="rounded rounded float-center" height="150" width="150">
+			    	<br>
+			    	<img src="img/47ig.png" class="rounded rounded float-center" height="150" width="150">
+			    </div>
 			    <!-- 電影 -->
 			    <div class="col-sm-4 pic">
 			    	<a href="movie.html">
 				    	<img src="img/movie.png" class="hw"
-				    	onmouseover="this.src='img/movieplace.jpg'" 
+				    	onmouseover="this.src='img/teachplace.jpg'" 
 				    	onmouseout="this.src='img/movie.png'">
 			    	</a>
 			    </div>
