--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -54,13 +54,13 @@
 						</ol>
 						<div class="carousel-inner">
 						    <div class="carousel-item active">
-						    	<img src="img/001.jpg" class="img-thumbnail d-block w-100">
+						    	<img src="img/001.JPG" class="img-thumbnail d-block w-100">
 						    </div>
 						    <div class="carousel-item">
-						    	<img src="img/002.jpg" class="img-thumbnail d-block w-100" >
+						    	<img src="img/002.JPG" class="img-thumbnail d-block w-100" >
 						    </div>
 						    <div class="carousel-item">
-						    	<img src="img/003.jpg" class="img-thumbnail d-block w-100">
+						    	<img src="img/003.JPG" class="img-thumbnail d-block w-100">
 						    </div>
 						</div>
 					</div>
