--- a/DEMO/index.html
+++ b/DEMO/index.html
@@ -109,7 +109,7 @@
 				    	onmouseout="this.src='img/lecture.png'">
 			    	</a>
 			    </div>
-			    <div class="col-sm-2">
+			    <div class="col-sm-2"  align="center">
 			    	<img src="img/17ig.png" class="rounded rounded float-center" height="150" width="150">
 			    	<br>
 			    	<img src="img/47ig.png" class="rounded rounded float-center" height="150" width="150">
