--- a/DEMO/aboutme.html
+++ b/DEMO/aboutme.html
@@ -124,19 +124,19 @@
 	    	<div class="bob-container"> 
   <div class="bob-row">
     <div class="bob-4item">
-      <img src="img\04.jpg">
+      <img src="img\04.png">
       <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4></center></div>
     </div>
     <div class="bob-4item">
-      <img src="img\06.jpg">
+      <img src="img\06.png">
       <div style="height:43px;"><center><h4>姓名:陳映彤</h2><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4></center></div>
     </div>
     <div class="bob-4item">
-      <img src="img\17.jpg">
+      <img src="img\17.png">
       <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4></center></div>
     </div>
     <div class="bob-4item">
-      <img src="img\47.jpg">
+      <img src="img\47.png">
       <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4></center></div>
     </div>
   </div>
