--- a/DEMO/map.html
+++ b/DEMO/map.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/index.css">
 	<style>
 		.container{
-			background-color: #FCFAF2
+			background-color: #e2d9d9
 		}
 		body{
 			align-content: center;
