--- a/DEMO/map.html
+++ b/DEMO/map.html
@@ -66,8 +66,18 @@
 	<section>
 		<div class="container">
 		<br><br>
-			<h1>教你如何走到活動地點</h1>
-			<iframe src="https://www.youtube.com/embed/2aBtDz87UK0" width="960" height="720"></iframe>
+			<h1>更多資訊</h1>
+			<a href="https://cge.cycu.edu.tw/index.php/welcome/active
+			" style="color:black; font-weight:bold;font-size: 36px;">https://cge.cycu.edu.tw/index.php/welcome/active 通識中心</a>
+			<br>
+			<a href="https://www1.cycu.edu.tw/
+			" style="color:black; font-weight:bold;font-size: 36px;">https://www1.cycu.edu.tw/ 中原大學</a>
+			<br>
+			<a href="https://itouch.cycu.edu.tw/active_project/cycu2100h_06/acpm3/#!/activityList/welcome
+			" style="color:black; font-weight:bold;font-size: 36px;">https://itouch.cycu.edu.tw/active_project/cycu2100h_06/acpm3/#!/activityList/welcome 活動報名</a>
+			<br>
+			<a href="https://itouch.cycu.edu.tw/index.jsp?type=student
+			" style="color:black; font-weight:bold;font-size: 36px;">https://itouch.cycu.edu.tw/index.jsp?type=student 活動預告</a>
 		<br><br>
 		</div>
 	</section>
