--- a/DEMO/map.html
+++ b/DEMO/map.html
@@ -69,16 +69,16 @@
 			<h1>更多資訊</h1>
 			<h3>
 			<a href="https://cge.cycu.edu.tw/index.php/welcome/active
-			" style="color:black; font-weight:bold;font-size: 36px;">https://cge.cycu.edu.tw/index.php/welcome/active 通識中心</a>
+			" style="color:black; font-weight:bold;font-size: 36px;">通識中心</a>
 			<br>
 			<a href="https://www1.cycu.edu.tw/
-			" style="color:black; font-weight:bold;font-size: 36px;">https://www1.cycu.edu.tw/ 中原大學</a>
+			" style="color:black; font-weight:bold;font-size: 36px;">中原大學</a>
 			<br>
 			<a href="https://itouch.cycu.edu.tw/active_project/cycu2100h_06/acpm3/#!/activityList/welcome
-			" style="color:black; font-weight:bold;font-size: 36px;">https://itouch.cycu.edu.tw/active_project/cycu2100h_06/acpm3/#!/activityList/welcome 活動報名</a>
+			" style="color:black; font-weight:bold;font-size: 36px;">活動報名</a>
 			<br>
 			<a href="https://itouch.cycu.edu.tw/index.jsp?type=student
-			" style="color:black; font-weight:bold;font-size: 36px;">https://itouch.cycu.edu.tw/index.jsp?type=student 活動預告</a>
+			" style="color:black; font-weight:bold;font-size: 36px;">活動預告</a>
 			</h3>
 		<br><br>
 		</div>
