--- a/DEMO/music.html
+++ b/DEMO/music.html
@@ -29,7 +29,13 @@
 		    <a class="nav-link active text-white" href="video.html"><h4>介紹影片</h4></a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link text-white" href="index.html#activity"><h4>通識活動</h4></a>
+	  	    <a class="nav-link text-white" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false"><h4>通識活動</h4></a>
+		    <div class="dropdown-menu">
+		      <a class="dropdown-item" href="show.html">表演時間表</a>
+		      <a class="dropdown-item" href="music.html">音樂會時間表</a>
+		      <a class="dropdown-item" href="lecture.html">講座時間表</a>
+		      <a class="dropdown-item" href="movie.html">電影時間表</a>
+		    </div>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link text-white" href="map.html"><h4>位置資訊</h4></a>
