--- a/DEMO/aboutme.html
+++ b/DEMO/aboutme.html
@@ -133,7 +133,7 @@
       <img src="img/04.jpg"
       onmouseover="this.src='img/04ig.png'" 
       onmouseout="this.src='img/04.jpg'">
-      <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4></center></div>
+      <div style="height:43px;"><center><h4>姓名:蘇家瑩</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:聽音樂，看表演</h4><h4>這次的網站乍看蠻簡單的，可是其實超麻煩，程式有很多小細節要顧，還要拍影片剪影片，而且還要兼顧其他的作業還有其他的科目，每天都焦頭爛額的，而且我剪影片的時候沒有注意到用錯版本的威力導演，結果全部剪好之後才發現已經來不及改了，只好再重頭再來，好險最後成功完成，這次經驗也告訴我們一步一步都要仔細小心，才不會到最後白白花了時間。</h4></center></div>
     </div>
     <div class="bob-4item">
       <img src="img/06.jpg"
