--- a/DEMO/aboutme.html
+++ b/DEMO/aboutme.html
@@ -139,32 +139,24 @@
       <img src="img/06.jpg"
       onmouseover="this.src='img/06ig.png'" 
       onmouseout="this.src='img/06.jpg'">
-      <div style="height:43px;"><center><h4>姓名:陳映彤</h2><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4></center></div>
+      <div style="height:43px;"><center><h4>姓名:陳映彤</h2><br><h4>班級:資管二甲</h4><br><h4>興趣:看小說，玩遊戲</h4><h4>這次的期中報告讓我學到很多，也體會到了時光飛逝的感覺，因為有很多東西不太懂，所以在寫的過程會邊查邊寫，不知不覺一個小時、兩個小時就過去了，時間在此時似乎顯得一點都不值錢。網站完成後回頭看還沒開始做網站的自己，發現自己成長了不少，同時也覺得很有成就感，感謝隊友們讓這個網站可以順利的完成</h4></center></div>
     </div>
     <div class="bob-4item">
       <img src="img/17.jpg"
       onmouseover="this.src='img/17ig.png'" 
       onmouseout="this.src='img/17.jpg'">
-      <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4></center></div>
+      <div style="height:43px;"><center><h4>姓名:王怡涵</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:彈琴，看電影</h4><h4>雖然對於資管系的我來說，寫程式已經不是第一次接觸了，但是這次的課程是需要團隊合作，不僅是需要程式的能力，更多的是美觀外觀的能力，還有許多小細節需要注意的，並不是像之前上的程式課一樣，只要自顧自地埋頭寫出來，不會的也只需要翻翻課本就可以快速地找到答案了。透過這次的期中專案業讓我學到了很多，因為我本身程式就沒有到特別好，所以我都會向同學請教，我們這組的每個人都很好，願意互相交流，絕不私藏小訣竅地把他所會的都告訴我，所以整個期中專案合作起來真的很開心，也學習到很多東西。</h4></center></div>
     </div>
     <div class="bob-4item">
       <img src="img/47.jpg"
       onmouseover="this.src='img/47ig.png'" 
       onmouseout="this.src='img/47.jpg'">
-      <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4></center></div>
+      <div style="height:43px;"><center><h4>姓名:洪子貽</h4><br><h4>班級:資管二甲</h4><br><h4>興趣:看書，看影片</h4><h4>這次做網頁的體驗讓我知道了做網頁並不是這麼簡單的，我們很多時間在修改內容和美化網頁，尤其是網頁的配色，花了我們很多時間在尋找，現在真的發現成為一個網頁設計師真的沒有這麼簡單，要花時間在美化更要花時間在邏輯的思考，但成品做出來後真的會很有成就感，雖然有時候會跟自己的預想不太一樣，總會有一些力不從心的感覺，但我覺得經過這一次我在期末的作業上應該會有更好的表現。</h4></center></div>
     </div>
   </div>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
-<br>
-<br>
-<br>
+<br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br><br><br>
 
 
            <hr color="black" size="7">
