--- a/DEMO/video.html
+++ b/DEMO/video.html
@@ -61,7 +61,7 @@
 			<h4 align="left">影片內容簡介：</h4>
 			<h4 align="left">以第一鏡頭的方式來拍攝，首先是AB同學看到活動中心大排長龍的，就好奇地去詢問是有什麼活動，一問之下才發現原來中原有這麼多有趣的通識活動給學生參加，影片裡也介紹了如何查看通識活動。</h4>
 			<h1>幕後花絮</h1>
-			<iframe src="https://www.youtube.com/embed/0HJJZ0kiZ3U&feature=youtu.be" width="800" height="500"></iframe>
+			<iframe src="https://www.youtube.com/embed/0HJJZ0kiZ3U" width="800" height="500"></iframe>
 			<br>
 		</div>
 	</section>
