--- a/DEMO/video.html
+++ b/DEMO/video.html
@@ -63,6 +63,8 @@
 			<h1>幕後花絮</h1>
 			<iframe src="https://www.youtube.com/embed/0HJJZ0kiZ3U" width="800" height="500"></iframe>
 			<br>
+			<img src="img/S__24035400.jpg">
+			<h3>再次感謝4號學弟</h3>
 		</div>
 	</section>
 
