--- a/DEMO/map.html
+++ b/DEMO/map.html
@@ -83,7 +83,7 @@
 			<a href="https://itouch.cycu.edu.tw/active_project/cycu2100h_06/acpm3/#!/activityList/welcome
 			" style="color:black; font-weight:bold;font-size: 36px;">活動報名</a>
 			<br>
-			<a href="https://itouch.cycu.edu.tw/index.jsp?type=student
+			<a href="https://ann.cycu.edu.tw/aa/
 			" style="color:black; font-weight:bold;font-size: 36px;">活動預告</a>
 			</h3>
 		<br><br>
