--- a/myweb/index.html
+++ b/myweb/index.html
@@ -206,7 +206,7 @@
 
 	<footer>
 		<div class="container-fluid footerbgcolor pt-3 pb-2" >
-            <h4>@2019陳映彤</h4>
+            <h4>Copyright &copy 2019 by 陳映彤</h4>
             <a href='https://pngtree.com/' class="text-white">圖片來源：pngtree.com</a>
         </div>
 	</footer>
