--- a/TTTEEAAA/allgoods.html
+++ b/TTTEEAAA/allgoods.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                    <a href="good1.html"><img src="img/good1.jpg" class="img-fluid goodsize">
+                    <a href="good1.html"><img src="img/good1.jpg" class="img-fluid goodsize"></a>
                     <hr>
                     <a href="good1.html" class="text-dark">愛爾蘭奶油紅茶</a>
                     <p>NT$100</p>                    
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good3.html"><img src="img/good3.jpg" class="img-fluid goodsize">
+                        <a href="good3.html"><img src="img/good3.jpg" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good3.html" class="text-dark">檸檬香茅茶</a>
                         <p>NT$100</p>                    
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good6.html"><img src="img/good6.jpg" class="img-fluid goodsize">
+                        <a href="good6.html"><img src="img/good6.jpg" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good6.html" class="text-dark">沁涼薄荷紅茶</a>
                         <p>NT$100</p>                    
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-sm"></div>
                 <div class="col-sm-3 border rounded pt-3 pb-3 shadow-sm bg-white">
-                        <a href="good9.html"><img src="img/good9.jpg" class="img-fluid goodsize">
+                        <a href="good9.html"><img src="img/good9.jpg" class="img-fluid goodsize"></a>
                         <hr>
                         <a href="good9.html" class="text-dark">魚池紅玉紅茶</a>
                         <p>NT$100</p>                    
