--- a/TTTEEAAA/payway.html
+++ b/TTTEEAAA/payway.html
@@ -53,8 +53,14 @@
     	<form method="post" action=""><center><h5>付款方式</h5><br>
     		<div class="B">
     		<br>
-    
-    		<div class="form-check">	
+    		<button type="button" class="btn btn-outline-secondary btn-lg">711貨到付款</button>
+    		<button type="button" class="btn btn-outline-secondary btn-lg">全家貨到付款</button>
+			<button type="button" class="btn btn-outline-secondary btn-lg">信用卡付款</button>
+			<button type="button" class="btn btn-outline-secondary btn-lg">宅配貨到付款</button>
+    		<br>
+    		<br>
+    		<!--萬一Button資料跑不出來用radios
+				<div class="form-check">	
 			  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
 			  <label class="form-check-label" for="exampleRadios1">711貨到付款 </label>
 		  	</div>
@@ -64,24 +70,25 @@
 			  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
 			  <label class="form-check-label" for="exampleRadios2">全家貨到付款</label>
 			</div> 
-
+		
 			<div class="form-check">
 			  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
-			  <label class="form-check-label" for="exampleRadios3">信用卡取貨 </label>
+			  <label class="form-check-label" for="exampleRadios3">信用卡先付款 </label>
 			 </div>
 			
 			 <div class="form-check">
 			  <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4" value="option4">
 			  <label class="form-check-label" for="exampleRadios4">宅配貨到付款</label>
 			</div>
-			
-    		<br>
-    		<button type="submit" class="btn btn-outline-danger ">確定</button>
-    		<button type="button" class="btn btn-outline-danger ">取消</button>
+
+    		-->
+    		<button type="button" class="btn btn-outline-danger ">上一步</button>
+    		<button type="submit" class="btn btn-outline-danger ">下一步</button>
+    		
     		<br>
     		<br>
 			</center>
-		</table>
+		
 		</div>
     	</form> 
 		</div>
