--- a/TTTEEAAA/allgoods.html
+++ b/TTTEEAAA/allgoods.html
@@ -61,7 +61,7 @@
             <div class="container-fluid bg-info">
                     <ul class="nav nav-fill">
                       <li class="nav-item">
-                        <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
+                        <a class="nav-link active text-white" href="#HOT"><h4>熱銷商品</h4></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active text-white" href="abouttea.html"><h4>關於茶</h4></a>
