--- a/TTTEEAAA/cheakout.html
+++ b/TTTEEAAA/cheakout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
       <div class="container-fluid bg-info">
               <ul class="nav nav-fill">
                 <li class="nav-item">
-                  <a class="nav-link active text-white" href="index.html#HOT"><h4>熱銷商品</h4></a>
+                  <a class="nav-link active text-white" href="#HOT"><h4>熱銷商品</h4></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active text-white" href="abouttea.html"><h4>關於茶</h4></a>
@@ -65,8 +65,41 @@
   </header>
         <br>
         <br>
-        <section>
-        	<center>
+        <section> 
+         <center> 
+        <table>
+          <tr>
+            <td><img src="img/good9.jpg" width="100px"></td>
+            <td>名稱:魚池紅玉紅茶</td>
+            <td>
+                    <div class="half">
+                        <ul class="btn-numbox">
+                            <li><span class="number">數量</span></li>
+                            <li>
+                                <ul class="count">
+                                    <li><span id="num-jian" class="num-jian bg-white">-</span></li>
+                                    <li><input type="text" class="input-num bg-white" id="input-num" value="0" /></li>
+                                    <li><span id="num-jia" class="num-jia bg-white">+</span></li>
+                                </ul>
+                            </li>
+                            <li><span class="kucun">（庫存:50）</span></li>
+                            <li><button type="button" class="btn btn-outline-dark">加到購物車</button></li>
+                　　　  </ul>
+                    </div>
+            </td>
+          
+            <td><button type="button" class="btn btn-outline-danger ">刪除</button></td>
+          </tr>
+          <tr>
+            <td><img src="img/good9.jpg" width="100px"></td>
+            <td>名稱:南非國寶茶</td>
+            <td>數量:1</td>
+          </tr>
+        </table>
+       <br>
+      <p>總金額:</p><span class="text-danger">NT$100</span>
+     </center>
+      <!--
         	  <div class="row justify-content-around align-items-center">
         	
                 <div class="col-4">
@@ -81,7 +114,7 @@
       		</div>
         	</center>
         	</div>
-        </div>
+        </div>-->
 		<div class="A">
     		<form method="post" action=""><center><h5>訂單</h5><br>
     		<div class="B">
